# safe-directory

./: .gitignore  README.md  cabal.project  changelog.md  configure.ac  directory.cabal  safe-directory.cabal
.github/workflows/: build.yml
System/: Directory.hs
System/Directory/: AbstractFilePath.hs  OsPath.hs  Template.hs
System/Directory/Internal/: AbstractFilePath.hs  Common.hs  OsPath.hs  Posix.hs  PosixFFI.hsc  Windows.hs  WindowsFFI.hsc
System/Directory/Internal/Common/: AbstractFilePath.hs  OsPath.hs  Template.hs
System/Directory/Internal/Config/: AbstractFilePath.hs  OsPath.hs
System/Directory/Internal/Posix/: AbstractFilePath.hs  OsPath.hs  Template.hs
System/Directory/Internal/Windows/: AbstractFilePath.hs  OsPath.hs  Template.hs
System/Directory/Internal/WindowsFFI/: AbstractFilePath.hsc  Common.hsc  OsPath.hsc
System/File/: OsPath.hs  Windows.hs
tests/: CanonicalizePath.hs  CopyFile001.hs  CopyFile002.hs  CopyFileWithMetadata.hs  CreateDirectoryIfMissing001.hs  CurrentDirectory001.hs  FileTime.hs  FindFile001.hs  GetDirContents001.hs  GetPermissions001.hs  LongPaths.hs  MakeAbsolute.hs  MinimizeNameConflicts.hs  PathIsSymbolicLink.hs  RemoveDirectoryRecursive001.hs  RemovePathForcibly.hs  RenameDirectory.hs  RenameFile001.hs  RenamePath.hs  Safe.hs  Simplify.hs  T8482.hs  TestUtils.hs  WithCurrentDirectory.hs  Xdg.hs  util.inl
