cabal-version:  2.0
name:           directory
version:        1.3.7.1
license:        BSD3
license-file:   LICENSE
maintainer:     libraries@haskell.org
bug-reports:    https://github.com/haskell/directory/issues
synopsis:       Platform-agnostic library for filesystem operations
description:
  This library provides a basic set of operations for manipulating files and
  directories in a portable way.
category:       System
build-type:     Configure
tested-with:    GHC>=7.4.1

extra-tmp-files:
    autom4te.cache
    config.log
    config.status
    HsDirectoryConfig.h

extra-source-files:
    HsDirectoryConfig.h.in
    README.md
    System/Directory/Internal/*.h
    System/Directory/Template.hs
    System/Directory/Internal/Common/Template.hs
    System/Directory/Internal/Posix/Template.hs
    System/Directory/Internal/Windows/Template.hs
    changelog.md
    configure
    configure.ac
    directory.buildinfo
    tests/*.hs
    tests/util.inl

source-repository head
    type:     git
    location: https://github.com/haskell/directory

Library
    default-language: Haskell2010
    default-extensions:
        MultiWayIf
        ViewPatterns
    other-extensions:
        CPP
        Trustworthy

    exposed-modules:
        System.Directory
        System.Directory.AbstractFilePath
        System.Directory.Internal
        System.Directory.Internal.AbstractFilePath
        System.Directory.Internal.Prelude
    other-modules:
        System.Directory.Internal.C_utimensat
        System.Directory.Internal.Common.AbstractFilePath
        System.Directory.Internal.Common
        System.Directory.Internal.Config
        System.Directory.Internal.Config.AbstractFilePath
        System.Directory.Internal.Posix
        System.Directory.Internal.PosixFFI
        System.Directory.Internal.Posix.AbstractFilePath
        System.Directory.Internal.Windows
        System.Directory.Internal.WindowsFFI
        System.Directory.Internal.WindowsFFI.Common
        System.Directory.Internal.WindowsFFI.AbstractFilePath
        System.Directory.Internal.Windows.AbstractFilePath
        System.File.AbstractFilePath
        System.File.PlatformFilePath

    include-dirs: .

    build-depends:
        base        >= 4.5 && < 4.18,
        bytestring  >= 0.9.2   && < 0.14,
        time        >= 1.4 && < 1.13,
        filepath    ^>= 2.0
    if os(windows)
        build-depends: Win32 ^>= 2.13.2.0
        other-modules:
            System.File.Windows
    else
        build-depends: unix ^>= 2.8.0.0
        other-modules:
            System.File.Posix

    ghc-options: -Wall

test-suite test
    default-language: Haskell2010
    other-extensions: BangPatterns, CPP, Safe
    ghc-options:      -Wall
    hs-source-dirs:   tests
    main-is:          Main.hs
    type:             exitcode-stdio-1.0
    build-depends:    base, directory, filepath, time
    if os(windows)
        build-depends: Win32
    else
        build-depends: unix
    other-modules:
        TestUtils
        Util
        -- test-modules-begin
        CanonicalizePath
        CopyFile001
        CopyFile002
        CopyFileWithMetadata
        CreateDirectory001
        CreateDirectoryIfMissing001
        CurrentDirectory001
        Directory001
        DoesDirectoryExist001
        DoesPathExist
        FileTime
        FindFile001
        GetDirContents001
        GetDirContents002
        GetFileSize
        GetHomeDirectory001
        GetHomeDirectory002
        GetPermissions001
        LongPaths
        MakeAbsolute
        MinimizeNameConflicts
        PathIsSymbolicLink
        RemoveDirectoryRecursive001
        RemovePathForcibly
        RenameDirectory
        RenameFile001
        RenamePath
        Safe
        Simplify
        T8482
        WithCurrentDirectory
        Xdg
        -- test-modules-end
